--- a/SimpleDataAccessLayer.vs2013/SimpleDataAccessLayer.vs2013.csproj
+++ b/SimpleDataAccessLayer.vs2013/SimpleDataAccessLayer.vs2013.csproj
@@ -212,6 +212,7 @@
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="SimpleDataAccessLayer.vs2013Package.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TableTypeDescriptor.cs" />
     <Compile Include="Tools.cs" />
   </ItemGroup>
   <ItemGroup>
