--- a/SimpleDataAccessLayer.vs2013.ItemTemplate/SimpleDataAccessLayer.vs2013.ItemTemplate.csproj
+++ b/SimpleDataAccessLayer.vs2013.ItemTemplate/SimpleDataAccessLayer.vs2013.ItemTemplate.csproj
@@ -79,12 +79,6 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="DataAccessLayer.tt">
-      <Parameters>
-        &lt;%3fxml version="1.0" encoding="utf-16"%3f&gt;
-        &lt;ArrayOfParameterStorage xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema" /&gt;
-      </Parameters>
-    </Content>
     <None Include="SimpleDataAccessLayer.vs2013.ItemTemplate.ico" />
   </ItemGroup>
   <ItemGroup>
@@ -113,6 +107,9 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="DataAccessLayer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
