--- a/UnitTests/App.config
+++ b/UnitTests/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <connectionStrings>
-    <add name="appcon" connectionString="Data Source=db-01;Initial Catalog=scratch;Integrated Security=True;Asynchronous Processing=True" />
+    <add name="appcon" connectionString="Data Source=db-01;Initial Catalog=RulesRepository;Integrated Security=True;Asynchronous Processing=True" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
